[project]
name = "mpc-robot"
version = "0.1.0"
description = ""
authors = [
    {name = "FrankCh",email = "frankch1996@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "mpc_robot", from = "src"}]


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
